// Vitest Snapshot v1

exports[`Component: TypeaheadMultiple > ui > default 1`] = `
<div>
  <div
    class="mb-3"
  >
    <div
      class="showing-placeholder"
    >
      <div
        class="rbt"
        style="outline: none; position: relative;"
        tabindex="-1"
      >
        <div
          class="rbt-input-multi form-control rbt-input"
          tabindex="-1"
        >
          <div
            class="rbt-input-wrapper"
          >
            <div
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; height: 100%; position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-haspopup="listbox"
                aria-label="Best friend"
                autocomplete="off"
                class="rbt-input-main"
                defaultvalue=""
                id="bestFriend"
                style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
                type="text"
              />
              <input
                aria-hidden="true"
                class="rbt-input-hint"
                defaultvalue=""
                readonly=""
                style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: TypeaheadMultiple > ui > loading 1`] = `
<div>
  <div
    class="mb-3"
  >
    <div
      class="showing-placeholder"
    >
      <div
        class="rbt has-aux"
        style="outline: none; position: relative;"
        tabindex="-1"
      >
        <div
          class="rbt-input-multi form-control rbt-input"
          tabindex="-1"
        >
          <div
            class="rbt-input-wrapper"
          >
            <div
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; height: 100%; position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-haspopup="listbox"
                aria-label="Best friend"
                autocomplete="off"
                class="rbt-input-main"
                defaultvalue=""
                id="bestFriend"
                style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
                type="text"
              />
              <input
                aria-hidden="true"
                class="rbt-input-hint"
                defaultvalue=""
                readonly=""
                style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
        <div
          class="rbt-aux"
        >
          <div
            class="rbt-loader spinner-border spinner-border-sm"
            role="status"
          >
            <span
              class="sr-only visually-hidden"
            >
              Loading...
            </span>
          </div>
        </div>
      </div>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: TypeaheadMultiple > ui > with a custom pagination text 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <div
      class="showing-placeholder"
    >
      <div
        class="rbt"
        style="outline: none; position: relative;"
        tabindex="-1"
      >
        <div
          class="rbt-input-multi form-control rbt-input"
          tabindex="-1"
        >
          <div
            class="rbt-input-wrapper"
          >
            <div
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; height: 100%; position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-haspopup="listbox"
                aria-label="Best friend"
                aria-owns="bestFriend-options"
                autocomplete="off"
                class="rbt-input-main"
                defaultvalue="42.nl"
                id="bestFriend"
                style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
                type="text"
              />
              <input
                aria-hidden="true"
                class="rbt-input-hint"
                defaultvalue=""
                readonly=""
                style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: initial; border-width: 0px; padding: 0px;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
        <div
          aria-label="menu-options"
          class="rbt-menu dropdown-menu show"
          data-popper-escaped="true"
          data-popper-placement="bottom-start"
          data-popper-reference-hidden="true"
          id="bestFriend-options"
          role="listbox"
          style="position: absolute; left: 0px; top: 0px; display: block; max-height: 300px; overflow: auto; right: auto; bottom: auto; transform: translate(0px, 0px); width: 0px;"
        >
          <a
            aria-label="admin@42.nl"
            aria-selected="false"
            class="dropdown-item"
            href="#"
            id="bestFriend-options-item-0"
            role="option"
          >
            admin@
            <mark
              class="rbt-highlight-text"
            >
              42.nl
            </mark>
          </a>
          <a
            aria-label="coordinator@42.nl"
            aria-selected="false"
            class="dropdown-item"
            href="#"
            id="bestFriend-options-item-1"
            role="option"
          >
            coordinator@
            <mark
              class="rbt-highlight-text"
            >
              42.nl
            </mark>
          </a>
          <div
            class="dropdown-divider"
            role="separator"
          />
          <a
            aria-label="Show more"
            aria-selected="false"
            class="dropdown-item rbt-menu-pagination-option"
            href="#"
            id="bestFriend-options-item-2"
            role="option"
          >
            Show more
          </a>
        </div>
      </div>
    </div>
    Some error
  </div>
</DocumentFragment>
`;

exports[`Component: TypeaheadMultiple > ui > with the default pagination text 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <div
      class="showing-placeholder"
    >
      <div
        class="rbt"
        style="outline: none; position: relative;"
        tabindex="-1"
      >
        <div
          class="rbt-input-multi form-control rbt-input"
          tabindex="-1"
        >
          <div
            class="rbt-input-wrapper"
          >
            <div
              style="display: flex; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; height: 100%; position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-haspopup="listbox"
                aria-label="Best friend"
                aria-owns="bestFriend-options"
                autocomplete="off"
                class="rbt-input-main"
                defaultvalue="42.nl"
                id="bestFriend"
                style="background-color: transparent; border: 0px; box-shadow: none; cursor: inherit; outline: none; padding: 0px; width: 100%; z-index: 1;"
                type="text"
              />
              <input
                aria-hidden="true"
                class="rbt-input-hint"
                defaultvalue=""
                readonly=""
                style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: initial; border-width: 0px; padding: 0px;"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
        <div
          aria-label="menu-options"
          class="rbt-menu dropdown-menu show"
          data-popper-escaped="true"
          data-popper-placement="bottom-start"
          data-popper-reference-hidden="true"
          id="bestFriend-options"
          role="listbox"
          style="position: absolute; left: 0px; top: 0px; display: block; max-height: 300px; overflow: auto; right: auto; bottom: auto; transform: translate(0px, 0px); width: 0px;"
        >
          <a
            aria-label="admin@42.nl"
            aria-selected="false"
            class="dropdown-item"
            href="#"
            id="bestFriend-options-item-0"
            role="option"
          >
            admin@
            <mark
              class="rbt-highlight-text"
            >
              42.nl
            </mark>
          </a>
          <a
            aria-label="coordinator@42.nl"
            aria-selected="false"
            class="dropdown-item"
            href="#"
            id="bestFriend-options-item-1"
            role="option"
          >
            coordinator@
            <mark
              class="rbt-highlight-text"
            >
              42.nl
            </mark>
          </a>
          <div
            class="dropdown-divider"
            role="separator"
          />
          <a
            aria-label="Display additional results..."
            aria-selected="false"
            class="dropdown-item rbt-menu-pagination-option"
            href="#"
            id="bestFriend-options-item-2"
            role="option"
          >
            Display additional results...
          </a>
        </div>
      </div>
    </div>
    Some error
  </div>
</DocumentFragment>
`;
